# sigil

./: .gitignore  README.md  pyproject.toml
docs/: CONCEPTS.md  QUICKSTART.md  WHY-NOT-RAG.md
sigil/: __init__.py  autonomy.py  cli.py  conflict.py  context.py  daemon.py  federation.py  frontmatter.py  fsnotify.py  hatch.py  lock.py  persona.py  provenance.py  provider.py  runbook.py  sandbox.py  tui.py  vault.py
sigil/templates/greenfield_vault/: BOOTSTRAP.md  example.md  persona.md
templates/greenfield_vault/: MOC.md  intent.md  schedule.md
tests/: test_autonomy.py  test_cli.py  test_conflict.py  test_context.py  test_daemon.py  test_drift.py  test_e2e.py  test_federation.py  test_frontmatter.py  test_fsnotify.py  test_hatch.py  test_lock.py  test_persona.py  test_provenance.py  test_provider.py  test_runbook.py  test_sandbox.py  test_security.py  test_tui.py  test_vault.py
tools/: makedemo.py
