[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sigil"
version = "1.6.1"
description = "Vault-native semi-autonomous agent framework"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
sigil = "sigil.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sigil*"]

[tool.setuptools.package-data]
sigil = ["templates/greenfield_vault/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
